--- a/Hotel.ATR1.RealPortal/Views/Home/Index.cshtml
+++ b/Hotel.ATR1.RealPortal/Views/Home/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    ViewData["Description"] = "The best rooms in Central Asia, at affordable prices";
+    ViewData["Keywords"] = "hotel, rooms, inn, promotion, discounts";
+
     Layout = "_LayoutBase";
 }
 
