--- a/Hotel.ATR1.RealPortal/Views/Rooms/Index.cshtml
+++ b/Hotel.ATR1.RealPortal/Views/Rooms/Index.cshtml
@@ -2,6 +2,6 @@
     string pageName = ViewBag.NamePage;
     string descriptionPage = ViewBag.DescriptionPage;
 
-    ViewData["NamePage"] = "room - grid view";
+    ViewData["NamePage"] = "Rooms";
     ViewData["DescriptionPage"] = "A quality room of hotel ATR with sea or mountain view";
 }
