--- a/Hotel.ATR1.RealPortal/Views/Event/Index.cshtml
+++ b/Hotel.ATR1.RealPortal/Views/Event/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["NamePage"] = "Events";
+    ViewData["DescriptionPage"] = "A quality room of hotel ATR with sea or mountain view";
 }
