--- a/Hotel.ATR1.RealPortal/Views/Shared/TopMenu.cshtml
+++ b/Hotel.ATR1.RealPortal/Views/Shared/TopMenu.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="main-menu hidden-xs">
     <nav>
         <ul>
-            <li><a href="index.html">HOME</a></li>
+            <li><a href="/">HOME</a></li>
             <li>
                 <a href="room-grid.html">ROOMS</a>
                 <ul class="submenu">
@@ -15,7 +15,9 @@
                     <li>
                         <a href="#">Megamenu List</a>
                         <ul>
-                            <li><a href="location.html">Location</a></li>
+                            <li>
+                                @Html.ActionLink("Location", "")
+                               </li>
                             <li><a href="room-grid.html">Room Grid</a></li>
                             <li><a href="room-list.html">Room List</a></li>
                             <li><a href="room-details.html">Room Details</a></li>
@@ -47,7 +49,25 @@
             <li><a href="location.html">LOCATION</a></li>
             <li><a href="event.html">EVENT</a></li>
             <li><a href="team.html">TEAM</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
+            <li><a href="@Url.Action("Contact","Home")">CONTACT</a></li>
+
+
+            @if (User.Identity.IsAuthenticated)
+            {
+                <li>
+                    <a href="#">@User.Identity.Name | </a>
+                </li>
+                <li>
+                    <a href="/account/logout">Logout</a>
+                </li>
+            }
+            else
+            {
+                <li>
+                    <a href="/account/login">Login</a>
+                </li>
+            }
+
         </ul>
     </nav>
 </div>
