--- a/Hotel.ATR1.RealPortal/Views/Shared/MobileMenu.cshtml
+++ b/Hotel.ATR1.RealPortal/Views/Shared/MobileMenu.cshtml
@@ -1,11 +1,14 @@
-﻿<div class="mobile-menu-area">
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+
+<div class="mobile-menu-area">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="mobile-menu">
                     <nav id="dropdown">
                         <ul>
-                            <li><a href="index.html">HOME</a></li>
+                            <li><a href="index.html">@Localizer["Home"]</a></li>
                             <li>
                                 <a href="room-grid.html">ROOMS</a>
                                 <ul class="submenu">
