--- a/Hotel.ATR1.RealPortal/Views/Shared/_Layout.cshtml
+++ b/Hotel.ATR1.RealPortal/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -41,9 +41,12 @@
                 <div class="col-lg-7 col-md-8 col-sm-8 hidden-xs">
                     <div class="header-top fix">
                         <div class="header-contact">
-                            <span class="text-theme">Contact:</span>
-                            <span>0088-234-675-827</span>
+                            <span class="text-theme">City:</span>
+                            <span style="cursor: pointer" id="userCity">Almaty</span>
+
+                            @Html.Partial("_lang")
                         </div>
+
                         <div class="header-links">
                             <a href="https://www.facebook.com/"><i class="zmdi zmdi-facebook"></i></a>
                             <a href="https://twitter.com/"><i class="zmdi zmdi-twitter"></i></a>
@@ -198,6 +201,23 @@
     <script src="~/js/plugins.js"></script>
 
     @RenderSection("Scripts", false)
+
+     <script>
+        $(document).ready(function () {
+            // var userCity = 'Context.Request.Cookies["city"]';
+            // if (userCity.trim() !== "") {
+            //     $('#userCity').html(userCity);
+            // }
+            // else
+            // {
+            //     $('#cityModal').modal('show');
+            // }
+
+            $('#userCity').on("click", function () {
+                $('#cityModal').modal('show');
+            });
+        });
+    </script>
 
     <script src="~/js/main.js"></script>
 </body>
