--- a/Hotel.ATR1.RealPortal/Views/Shared/TopMenu.cshtml
+++ b/Hotel.ATR1.RealPortal/Views/Shared/TopMenu.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="main-menu hidden-xs">
     <nav>
         <ul>
-            <li><a href="/">HOME</a></li>
+            <li><a href="/">@localizer["Home"]</a></li>
             <li>
                 <a href="room-grid.html">ROOMS</a>
                 <ul class="submenu">
