--- a/Hotel.ATR1.RealPortal/Views/Shared/_lang.cshtml
+++ b/Hotel.ATR1.RealPortal/Views/Shared/_lang.cshtml
@@ -12,8 +12,8 @@
 <span> | </span>
 <span class="text-theme">Lang:</span>
 <span>
-    <form id="cultureForm" asp-action="Cookie">
-        <select id="CultureList" name="culture"
+    <form id="cultureForm" asp-action="Index" method="post">
+        <select id="CultureList"
                 asp-for="@requestCulture.RequestCulture.UICulture.Name" asp-items="cultureItems">
         </select>
     </form>
