--- a/Hotel.ATR1.RealPortal/Views/_ViewImports.cshtml
+++ b/Hotel.ATR1.RealPortal/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
 ﻿@using Hotel.ATR1.RealPortal
 @using Hotel.ATR1.RealPortal.Models
+
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer localizer
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
