--- a/Hotel.ATR1.RealPortal/Views/Shared/TopMenu.cshtml
+++ b/Hotel.ATR1.RealPortal/Views/Shared/TopMenu.cshtml
@@ -3,7 +3,7 @@
         <ul>
             <li><a href="/">@localizer["Home"]</a></li>
             <li>
-                <a href="room-grid.html">ROOMS</a>
+                <a href="room-grid.html">@localizer["Rooms"]</a>
                 <ul class="submenu">
                     <li><a href="room-list.html">ROOM LIST</a></li>
                     <li><a href="room-details.html">ROOM DETAILS</a></li>
