--- a/Hotel.ATR1.RealPortal/Views/Shared/_Layout.cshtml
+++ b/Hotel.ATR1.RealPortal/Views/Shared/_Layout.cshtml
@@ -86,7 +86,6 @@
         </div>
     </section>
     <!-- Breadcrumb Area End -->
-
     @RenderBody()
 
 
@@ -185,7 +184,6 @@
         <!-- Footer Bottom Area End -->
     </footer>
     <!-- Footer Area End -->
-
     <!-- All js here -->
     <script src="~/js/vendor/jquery-1.12.4.min.js"></script>
     <script src="~/js/bootstrap.min.js"></script>
@@ -202,7 +200,19 @@
 
     @RenderSection("Scripts", false)
 
-     <script>
+    <script>
+        function SetCulture(selectedValue) {
+            $.ajax({
+                url: '/home/SetCulture',
+                data: { culture: selectedValue },
+                dataType: 'json',
+                type: 'POST',
+                success: function () {
+                    location.reload();
+                }
+            });
+        }
+
         $(document).ready(function () {
             // var userCity = 'Context.Request.Cookies["city"]';
             // if (userCity.trim() !== "") {
@@ -216,11 +226,16 @@
             $('#CultureList').on('change', function () {
                 var selectedValue = $(this).val();
 
-                var culture = "/?culture=" + selectedValue + "&ui-culture=" + selectedValue;
-                document.getElementById("cultureForm").action = culture;
-                document.getElementById("cultureForm").submit();
+                $.ajax({
+                    url: '/home/SetCulture',
+                    data: { culture: selectedValue },
+                    dataType: 'json',
+                    type: 'POST',
+                    success: function () {
+                        location.reload();
+                    }
+                });
             });
-
 
             $('#userCity').on("click", function () {
                 $('#cityModal').modal('show');
