--- a/Hotel.ATR1.RealPortal/Views/Shared/TopMenu.cshtml
+++ b/Hotel.ATR1.RealPortal/Views/Shared/TopMenu.cshtml
@@ -3,7 +3,7 @@
         <ul>
             <li><a href="/">@localizer["Home"]</a></li>
             <li>
-                <a href="room-grid.html">@localizer["Rooms"]</a>
+                <a href="@Url.Action("Index","Rooms")">@localizer["Rooms"]</a>
                 <ul class="submenu">
                     <li><a href="room-list.html">ROOM LIST</a></li>
                     <li><a href="room-details.html">ROOM DETAILS</a></li>
@@ -48,7 +48,7 @@
             </li>
             <li><a href="location.html">LOCATION</a></li>
             <li><a href="event.html">EVENT</a></li>
-            <li><a href="team.html">TEAM</a></li>
+            <li><a href="/Rooms/Index">TEAM</a></li>
             <li><a href="@Url.Action("Contact","Home")">CONTACT</a></li>
 
 
