--- a/Hotel.ATR1.RealPortal/Views/Shared/TopMenu.cshtml
+++ b/Hotel.ATR1.RealPortal/Views/Shared/TopMenu.cshtml
@@ -48,7 +48,7 @@
             </li>
             <li><a href="location.html">LOCATION</a></li>
             <li><a href="event.html">EVENT</a></li>
-            <li><a href="/Rooms/Index">TEAM</a></li>
+            <li><a href="@Url.Action("Index","Team")">TEAM</a></li>
             <li><a href="@Url.Action("Contact","Home")">CONTACT</a></li>
 
 
